[project]
name = "agentic-phidata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "duckdb>=1.1.3",
    "duckduckgo-search>=7.2.1",
    "fastapi>=0.115.6",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "lxml-html-clean>=0.4.1",
    "newspaper4k>=0.9.3.1",
    "openai>=1.59.7",
    "pandastools>=0.7.0",
    "pgvector>=0.3.6",
    "phidata>=2.7.8",
    "psycopg>=3.2.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "streamlit>=1.41.1",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.51",
    "youtube-transcript-api>=0.6.3",
]
